--- a/johns-hopkins-web-dev/css/assignment-3-1.css
+++ b/johns-hopkins-web-dev/css/assignment-3-1.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 body{
   font-family: 'Oxygen', sans-serif;
@@ -5,9 +10,18 @@ body{
 }
 
 #header-nav{
-  background-color: #b3b3b3;
+  background-color: #1affff;
   border-radius: 0;
   border: 1px solid;
+}
+
+.navbar-brand h1{
+  font-size: 1.3em;
+  font-weight: 300;
+  text-shadow: 1px 1px 1px #222;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 0.65;
 }
 
 .navbar-brand a{
@@ -15,6 +29,7 @@ body{
   color: #000;
   font-size: 1.5em;
 }
+
 
 .navbar-brand a:hover, .navbar-brand a:focus{
 text-decoration: none;
@@ -31,13 +46,22 @@ text-decoration: none;
 }
 
 #nav-list li{
-  border: 1px solid;
+  border: 1px dashed;
+  padding: 5px auto;
+  font-size: 1.2em;
 }
 
-.main-content div{
-  background-color: #b3b3b3;
-  width: 90vw;
-  margin: 5vw;
-  padding: 5vw;
-  box-sizing: border-box;
+h2,h3{
+  font-weight: bold;
+}
+
+.row {
+    margin: auto 20px;
+}
+
+#chicken, #beef, #sushi{
+  background-color: #99ffff;
+  padding: 1% 3%;
+  margin-left: 1%; 
+  margin-bottom: 5vh;
 }
