--- a/johns-hopkins-web-dev/css/assignment-3.css
+++ b/johns-hopkins-web-dev/css/assignment-3.css
@@ -1,3 +1,8 @@
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 body{
   font-family: 'Oxygen', sans-serif;
@@ -5,7 +10,7 @@ body{
 }
 
 #header-nav{
-  background-color: #b3b3b3;
+  background-color: #1affff;
   border-radius: 0;
   border: 1px solid;
 }
@@ -41,19 +46,22 @@ text-decoration: none;
 }
 
 #nav-list li{
-  border: 1px solid;
+  border: 1px dashed;
+  padding: 5px auto;
+  font-size: 1.2em;
 }
 
 h2,h3{
   font-weight: bold;
 }
 
-
-#chicken, #beef, #sushi{
-  background-color: #b3b3b3; 
-  margin-bottom: 5vh;
+.row {
+    margin: auto 20px;
 }
 
-#sushi{
-  margin-bottom: 0;
+#chicken, #beef, #sushi{
+  background-color: #99ffff;
+  padding: 1% 3%;
+  margin-left: 1%; 
+  margin-bottom: 5vh;
 }
